# chkfs

./: .gitignore  README.md  cabal.project.freeze  chkfs.cabal  hie.yaml  package.yaml  stack.yaml
app/: Main.hs
src/: Chkfs.hs
