cabal-version: 1.12

name:           chkfs
version:        0.1.0.0
category:       Web
homepage:       https://github.com/githubuser/chkfs#readme
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

library
  exposed-modules:
      Chkfs
  other-modules:
      Paths_chkfs
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , derive-storable
    , hspec
    , hspec-core
    , mmap
    , vector
    , vector-sized
  default-language: Haskell2010

executable chkfs
  main-is: Main.hs
  other-modules:
      Paths_chkfs
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , chkfs
  default-language: Haskell2010
